--- a/verslag.tex
+++ b/verslag.tex
@@ -170,14 +170,14 @@
 \input{./titlepage.tex}
 \tableofcontents
 
-\input{./Hoofdstukken/inleiding.tex}
-\input{./Hoofdstukken/organisatie.tex} 
+%\input{./Hoofdstukken/inleiding.tex}
+%\input{./Hoofdstukken/organisatie.tex} 
 \input{./Hoofdstukken/requirements.tex} 
-\input{./Hoofdstukken/ontwerp.tex} 
-\input{./Hoofdstukken/testplan.tex} 
+%\input{./Hoofdstukken/ontwerp.tex} 
+%\input{./Hoofdstukken/testplan.tex} 
 \input{./Hoofdstukken/resultaten.tex}
-\input{./Hoofdstukken/evaluatie.tex} 
-\input{./Hoofdstukken/conclusie.tex}
+%\input{./Hoofdstukken/evaluatie.tex} 
+%\input{./Hoofdstukken/conclusie.tex}
 
 \input{./Hoofdstukken/appendices.tex}
 
