--- a/Hoofdstukken/requirements.tex
+++ b/Hoofdstukken/requirements.tex
@@ -95,6 +95,7 @@ Operating systemen incompatibility was een ander probleem met de oude grafische 
 		\item De library dient makkelijk af te sluiten te zijn.
 	\end{enumerate}
 	\item \label{req:coverage} De library dient getest te zijn met 70\% code coverage (exclusief frameworks).
+\setcounter{enumi}{\value{startvalue}}
 \end{enumerate}
 
 \paragraph{Gebruiksvriendelijke API}
