--- a/Hoofdstukken/resultaten/tests/traceability_matrix.tex
+++ b/Hoofdstukken/resultaten/tests/traceability_matrix.tex
@@ -28,17 +28,40 @@
 \ref{req:performance} &
 \ref{req:maintenance} &
 \ref{req:coverage}  \\ \cline{1-29}
-\multicolumn{1}{|c|}{\multirow{4}{*}{Tests}} & \ref{test:js:convert:rgbajson:rgba} 	&   &   &   &   &   &   &   & X & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
-\multicolumn{1}{|c|}{} & \ref{test:js:convert:rgbajson:rgba:alphazero}				&   &   &   &   &   &   &   & X & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
-\multicolumn{1}{|c|}{} & \ref{test:js:convert:rgbjson:rgba} 						&   &   &   &   &   &   &   & X & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
-\multicolumn{1}{|c|}{} & \ref{test:js:parse:rect}									& X &   & X &   &   &   &   & X & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
-\multicolumn{1}{|c|}{} & \ref{test:js:parse:circle} 								& X & X &   &   &   &   &   & X & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
-\multicolumn{1}{|c|}{} & \ref{test:js:parse:container}								& X &   &   &   &   &   &   & X & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
-\multicolumn{1}{|c|}{} & \ref{test:js:draw:rect} 									& X &   & X &   &   &   &   & X & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
-\multicolumn{1}{|c|}{} & \ref{test:js:draw:polygon} 								& X &   &   &   &   &   &   & X & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
-\multicolumn{1}{|c|}{} & \ref{test:js:draw:circle} 									& X & X &   &   &   &   &   & X & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
-\multicolumn{1}{|c|}{} & \ref{test:js:draw:circle:alpha} 							& X & X &   &   &   &   &   & X & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
-\multicolumn{1}{|c|}{} & \ref{test:js:draw:text} 									& X &   &   &   &   & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
-\multicolumn{1}{|c|}{} & \ref{test:js:draw:container} 								& X &   &   &   &   &   &   & X & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
-\multicolumn{1}{|c|}{} & \ref{test:js:draw:container:clipping} 						& X &   &   &   &   &   &   & X & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{\multirow{4}{*}{Tests}} & \ref{test:js:convert:rgbajson:rgba} 		&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:execute:actions:displayfixed}						&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:execute:actions:displayfluid}						&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:execute:actions:opencontrol}						&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:execute:actions:closecontrol}						&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:parse:actions:fullscreen}							&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:convert:rgbajson:rgba}							&   &   &   &   &   &   &   & X & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:convert:rgbajson:rgba:alphazero}					&   &   &   &   &   &   &   & X & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:convert:rgbjson:rgba} 							&   &   &   &   &   &   &   & X & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:draw:line}, \ref{test:haskell:line}				& X &   &   & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:draw:rect}, \ref{test:haskell:rect}				& X &   & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:draw:polygon}, \ref{test:haskell:polygon}			& X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:draw:arc}, \ref{test:haskell:arc}					& X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:draw:circle}, \ref{test:haskell:circle}			& X & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:draw:circle:alpha} 								& X & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:draw:text}, \ref{test:haskell:text}				& X &   &   &   &   & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:draw:container}, \ref{test:haskell:containers}	& X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:draw:container:clipping} 							& X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:mouse}, \ref{test:haskell:mouse}					&   &   &   &   &   &   &   &   &   &   &   & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:js:mouse:draw} 										&   &   &   &   &   &   &   &   &   &   &   & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:haskell:scroll} 										&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+
+\multicolumn{1}{|c|}{} & \ref{test:blackbox:keyevents}	 								&   &   &   &   &   &   &   &   &   &   & X &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:blackbox:scrollevents}								&   &   &   &   &   &   &   &   &   &   &   &   & X &   &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+
+
+\multicolumn{1}{|c|}{} & \ref{test:blackbox:prompt}										&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:blackbox:lokalebestanden}							&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:blackbox:animatie}									&   &   &   &   &   &   &   &   &   &   &   &   &   & X &   &   &   &   &   &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:blackbox:download}, \ref{test:haskell:download}		&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:blackbox:upload} 									&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X &   &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:blackbox:error} 										&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X &   &   &   &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:blackbox:debug} 										&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X &   &   &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:blackbox:multiplatform} 								&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X &   &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:blackbox:browser} 									&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X &		 \\ \cline{2-29}
+\multicolumn{1}{|c|}{} & \ref{test:blackbox:coverage} 									&   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   &   & X	 	 \\ \cline{2-29}
 \end{tabular}
