--- a/Hoofdstukken/appendices.tex
+++ b/Hoofdstukken/appendices.tex
@@ -9,6 +9,6 @@
 
 
 
-%\input{./Hoofdstukken/appendices/gebruikershandleiding.tex}
-%\input{./Hoofdstukken/appendices/uitbreiden.tex}
+\input{./Hoofdstukken/appendices/gebruikershandleiding.tex}
+\input{./Hoofdstukken/appendices/uitbreiden.tex}
 \input{./Hoofdstukken/appendices/traceability_matrix.tex}
