Performance analyse verbeterd

--- a/Hoofdstukken/conclusie.tex
+++ b/Hoofdstukken/conclusie.tex
@@ -10,7 +10,7 @@ In \autoref{hoofdstuk:requirements} staan de requirements die aan de ontworpen o
 
 Hieronder worden aspecten besproken die nog missen in Canvas.hs. 
 
-\section{Aanbevelingen}
+\section{Aanbevelingen} \label{sec:aanbevelingen}
 Canvas.hs is bedoeld als vervanging voor de vorige omgeving die bij het vak Functioneel Programmeren gebruikt werd. Zodoende brengt Canvas.hs voordelen met zich mee over dat systeem. Er zijn echter nog mogelijkheden voor andere features. Wij, als ontwikkelaars van Canvas.hs, zetten hieronder enkele features neer die momenteel niet in het project meegenomen zijn, maar die in toekomstige versies toegevoegd zouden kunnen worden. Ook wordt per feature aangegeven hoe ondersteuning voor die feature toegevoegd kan worden.
 
 \subsubsection{Image type}
